# c_nrtrace

./: .gitignore  CMakeLists.txt  README.md  run_cmake.sh  run_cmake_aarch64.sh
cfg/: dump_syscall.sh  syscall_list.h  syscall_print_entry.h  syscall_table_type.h
cfg/aarch64/: NR.h
cfg/arm/: NR.h
cfg/uni/: bit_type.h
cfg/x86/: NR.h  print.h
cfg/x86_64/: NR.h  print.h  type.h
src/: main.c  print_statfs.h  sys_socket.h  tracer.c  tracer.h  tracer_macro.h
src/num_to_str/: num_to_str.c
src/num_to_str/inc/: num_to_str.h
src/peek/: peek.c  syscall_info.c
src/peek/inc/: peek.h  syscall_info.h
src/printer/: dirent.c  dirent.h  epoll.c  epoll.h  errno.c  iovec.c  iovec.h  msghdr.c  msghdr.h  poll.c  poll.h  printer.c  printer.h  rlimit.c  rlimit.h  sockaddr.c  sockcall.h  socketcall.c  stat.c  stat.h  statfs.c  statfs.h  time.c  time.h
src/printer/inc/: printer.h
src/string_buffer/: string_buffer.c
src/string_buffer/inc/: string_buffer.h
src/util_header/: util_header_all.h
src/util_header/util_header/: access.h  count_macro.h  debug.h  stdc.h  type.h
src/vl_array/: vl_array.c
src/vl_array/inc/: vl_array.h
src/vl_buffer/inc/: vl_buffer_lib.h
test/: build.sh  clock_gettime_test.c  epoll_test.c  fork_test.c  getdents64_test.c  getdents_test.c  getrlimit_test.c  pipe_test.c  readlink_test.c  readv_test.c  sendfile_test.c  sendmsg_test.c  stat64_test.c  stat_test.c  statfs64_test.c  statfs_test.c
test_lib/: test.h  to_str_test.c
tool/: make_header.sh  make_uni_header.sh
